# microservice-practice

./: .gitignore  Cargo.toml  Dockerfile.admin-service  Dockerfile.student-service  Dockerfile.teacher-service  README.md  SPEC.ja.md  SPEC.md
admin-service/: Cargo.toml
admin-service/src/: lib.rs  main.rs  routes.rs
docs/: BLOG-ja.md  QUICKSTART-ja.md
k8s/: admin-service-configmap.yaml  admin-service-deployment.yaml  admin-service-secret.yaml  ingress.yaml  migrations-configmap.yaml  migrations-job.yaml  namespace.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-secret.yaml  student-service-configmap.yaml  student-service-deployment.yaml  student-service-secret.yaml  teacher-service-configmap.yaml  teacher-service-deployment.yaml  teacher-service-secret.yaml
migrations/: 001_create_schemas.sql  002_admin_courses.sql  003_teacher_assignments.sql  004_student_submissions.sql
scripts/: gen-jwt.sh  integration-test.sh  redeploy-service.sh  run-local-setup.sh
shared/: Cargo.toml
shared/src/: auth.rs  config.rs  http_client.rs  lib.rs  tracing_init.rs
student-service/: Cargo.toml
student-service/src/: lib.rs  main.rs  routes.rs
teacher-service/: Cargo.toml
teacher-service/src/: lib.rs  main.rs  routes.rs
